# asv_bench_mpi

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: mpip-e2e.yml
asv_bench_mpi/: __init__.py  _native.c  launch_probe.py  mpi_app_build.py  mpiexec.py  mpip_probes.py  mpip_report.py  mpip_run.py  payload_build.py  probes.py  runner_payload.py
asv_bench_mpi/benchmarks/: __init__.py  mpi_time.py  mpi_track.py  mpip_track.py  native_time.py  native_track.py
asv_bench_mpi/payload/: kernel_c.c  kernel_f.f90
docs/: mpip.md
examples/: benchmarks_mpi_comm.py  benchmarks_mpip.py  benchmarks_native.py
examples/mpip/: pingpong.c  sample_report.mpiP
scripts/: build_mpip.sh  run_real_mpip_e2e.sh
tests/: test_discovery_integration.py  test_mpi_live.py  test_mpiexec.py  test_mpip_real.py  test_mpip_run_unit.py  test_mpip_scaffold.py  test_native_benchmarks.py  test_native_extension.py  test_plugin_export.py
