[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "asv_bench_mpi"
description = "Native (C/Fortran) + optional mpiP launch plugin for airspeed velocity"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Rohit Goswami", email = "rgoswami@ieee.org" }]
dependencies = [
  "asv_runner>=0.2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
# Transitional pure-Python MPI types only (not the primary design)
mpi4py = ["mpi4py"]
test = ["pytest"]

[project.urls]
Source = "https://github.com/HaoZeke/asv_bench_mpi"
Issues = "https://github.com/HaoZeke/asv_bench_mpi/issues"

[tool.setuptools.packages.find]
include = ["asv_bench_mpi*"]

[tool.setuptools.package-data]
asv_bench_mpi = ["payload/*.c", "payload/*.f90"]

[tool.setuptools_scm]
write_to = "asv_bench_mpi/_version.py"
fallback_version = "0.2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
